--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 spring.datasource.url=jdbc:mysql://localhost:3306/schedule
 spring.datasource.username=root
-spring.datasource.password=990515
+spring.datasource.password=#
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
