--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,10 @@ dependencies {
 
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+//    implementation 'javax.validation:validation-api:2.0.1.Final'
+    testImplementation 'com.h2database:h2'
+    testImplementation 'org.mockito:mockito-core:4.8.0'
 }
 
 tasks.named('test') {
