--- a/build.gradle
+++ b/build.gradle
@@ -47,9 +47,14 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
-//    implementation 'javax.validation:validation-api:2.0.1.Final'
     testImplementation 'com.h2database:h2'
     testImplementation 'org.mockito:mockito-core:4.8.0'
+
+    //query dsl
+    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
+    annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
+    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
+    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 }
 
 tasks.named('test') {
